--- a/RacingCar_성지은_10108/Form1.resx
+++ b/RacingCar_성지은_10108/Form1.resx
@@ -121,7 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Enemy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox_expensiveCar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
         1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAgRSURBVHhe7ZoJ
@@ -193,6 +193,185 @@
         grRTC6LZxcdYbGqkFX1fpZvTZtPrCV244B5p4/lyWLz9L1r5/TV+RWBXmEy4wsvDJnIsciAXcuK5qUkD
         3TgJROOtsyj0hegY+iI9iyxmM0U+1kFdGL3Bm6XaiGwbx7HIgVzIeTt3w9w6qyBaT/FKUDdPA3zB0Tzi
         kfsCMXfkQM6GvXlaQTSv7fOmc+Kvj5j6w7H/4/Z5avIPaFIWC3hi/DsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox_expensiveCar2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAgRSURBVHhe7ZoJ
+        bFRVFIZpO+1QmO5DNyhdaWlpgJYKhYrYsshimwKKCrggWowRkEXjSnDBqCgKQUEQUBRkjxYFalxAQVwA
+        FSWAKMoiJsaVJWpEj+c/M/f5pu9O7dRCi74/+dI39953zn/uu3Pfm5m2sGXLli1btmzZsmXLli1b/15u
+        ppgpZ65iJjLTmdnMUmY9s5XZwxxjfvGCY7ShD2MwFufgXMRALMREbORoViphnmK+ZugscZSZz/Rimkyd
+        mS2MYSwiKoZyuxRRSd8hNGjYaBoxZjyNnTSNbp4+i6Y9toRmLn6R5q/dQste203rPzhMmz87IeAYbejD
+        GIzFOTgXMRALMREbOcw5mc0MvJxVTWV+YygqJo7GTLiTnqv5kLYfPt1gcD7i6Ppqs3TTLhkbGR2rJgFe
+        pjBnXEHMXIaCgoLk6ryx9yetyfryzqHf5WqHOVtKMQ/MX6UdpwO5Lx1zk3jBucwc5oxqGkMOh4NmzFuh
+        NRUIG3Ydo5Kywcq8LPU39v2sHVsX8OJwhKo4dzEBK4R5mzHMePmAiWegPswfwcEhAV0lfzz+/EZyxydJ
+        nuhYNz309DrtuPoyY/5KgjeOd5rpzUDwvoMx1wRQK2o2hNtM7UGKdxkM/gSvR1ZN1hqoL1sOnJS3jlq2
+        RSVlVP3+Ie3YQLni+knK824Gnt/zvtaBmg3hHkxzby6kUzXDBRyjjfmUkQlKTklr0BI18+CCNRI3NMxJ
+        E+6eKXuAblxDgLfklHTl+0oG3v3VhZoN4Sqrjtpcw+zDMW5PusSBcs34O2jpxp3avn8LPHp9H2DGeI91
+        oGZDeK/g/a4buAB/26Vl0daDv2qTNie2ffkbtc/MUd7xgGauRWHe2/wKVx6D5X5/jqK8o5Z6K5i5lJFl
+        /x/hIFPFOJg61ZIxds6sti5aeEsRTbwkW16HO0No08wLjA2lufHVyospNzVSvOalRcqGhxpUPQxqQ41+
+        9SBD7dqES+E/bxgmgU9uGk7XDcmQIK5wB22eXWpJ3tTULv7Qqoul/fjGYVILakKft0atejCng/n+/Nqs
+        C2nJbd1lBhEAgTAJVw9MkyCRrUNp2xN9fQw0JSgWRcNbdkoEHVwxRNrhHTU8c3t3uWghwfLs8QeDT7AW
+        fcjQpBHZcmKYI1gCds+NpZ0L+0tArIiKkmRpj49x0keLBvgYaQpw5VXx+IvXaN+1cAD1yI2TdtSCmlAb
+        XjOo1SLp/H59JR1dU64GCqEcYPKIHPrxlaH0w8tDqV9RgrRjWe19bpDF1NlCVzwu0n1j88kZKo/FBl+v
+        LZfaTG0WSQcC73l2oBy7E5KpclSV8djaOTOa3uGl/111JfXu3EbaMpJa0+fLPUvubIJl3yk9SjyoZQ9v
+        XbKipQ2eK0deLzXgNWrCeTj2YpF0YNDWuWVynJNfIA8X+KKifYZn+ThCPKvh0KpyKsz2fDnRJtop+8Oy
+        u4vpm3UVPkYbE8RGDuTCWxC5ceUPLBssV129bfE4PGd5jXjP7tRV2tSehWMvFkkHlhFudTjGp7VF1dsl
+        0Jv7j9NlYyfyJy5PkuK8ODqyupy6eSdB4QgJktVx77X59O68fj4FqB0ZV8x8DkAb+tSmq0AMFIeYiG0+
+        BxcAftV7Hd7gEV7hGd7VJ07UhLGm8y2SDszoLt700nlp4zWCDh09jmp2f0vj73qYwvhDDNoxAfUx2Zio
+        yUUu8+Rio0Y/vMEjvMKzulioBTWp/cKLRUYnBmJzm3JZjmyAaMOnN/wNCmpB4yoyZR9QBsyYl2my27j3
+        GqgrrZ4xQF0rAzH+6e0FL1XlGeIN5yiv8I4aUEut4oFF0tEp4+/76RcvDKGPF19EZYXx0uaOctLqe3pp
+        TTQElVPX1xCqHzifEmM9X62V5Ltpx4L+vptlqs8EWyQdB9cPtkwCHoJefbSP3B51iRuKyqnrayjwCK/w
+        XLv4Ay8NMnIyFknH8beH0hfVgynPOwl4/j+vYyyNHpAqG9vyacXyYIRnAp2BpgBe4Ane4BFe4RneUQNq
+        QU2oTdXJWCQdGKQmIS4qzHyCD9iQMpNdNLB7Ik0Y3kEeOWse6SM7rc5kY4DYyIFcyInc8FDXxosaVPEB
+        TcCTt3u+OsIXjYkZ+ZSQlkcxCankiomnsJatjYej5oIjNIxaRcRSpDuZ3O06UHxqR+MuMO+OboFNwHtL
+        +xrLJyE1l7IKyyxkFpRSaqeelNyhqyREYhgIYSMqVmMTHOIgZ6sIuQixSemUmJ5PKR3Po8yufbQe49k7
+        znOGBdO2JWX/OAF/MvTTlkrqmuN5nIyMS9IGPpdADagFNaE2HHtrtegrhubcWqAGUYafma2LjC4XyIpw
+        xSRo+xsCYiEmYuv66wI1qHpMteEbIotuZIzBQBfQH+3zelBUm7bG+w6kdCzSjg0ExFDxEBs5kEs31h/q
+        fBM3MFr5DMRmF+6Kpgi+AtHxKeRumyWbYdsOBWyiWK5IUmZnahVp/EjpOS+8tbRnFZZazAROqcRCTHMO
+        5EQ7PMALPMEbPMIrPMM7ajCf58WvZIAr0vPhIkBOMK/XajsTIAdy6fr84oryqcmvjjDUa8BoGnT5VCqt
+        qOLjUVRQUkEJ/B5EH4MN5C1mP3OK+YyZxEQx+DkKfeZkjQli45td5EJO5IYHeEGfbOSJKTniGd5RA2rp
+        2X+UinGY8av7GHNCHUjUXLWd0Xk2cy/jV6HMDEb37y741RX/w9OKaa5yMZgEeK3tH/9Wcz+DGm3ZsmXL
+        li1btmzZsmXL1v9YLVr8BduoVFMsE9nHAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox_coin1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAlGSURBVHhe1Zv5
+        b1RVFMcRl0SjRo0hJibGqDHxF0qhnbbMtBQXcOk0uNT4g+EHY/wDjD8at59UwqoiJCoQUaMRMcYFKe1Q
+        oMu0A1RR3IAuJlAHylpoS50ez/fNffCWM+/e96aDepJPHHzv3Xe/993lnHNvp5Xa6MCjM2ig4QnmZepv
+        +IQGkruZQ8xx5jw1zyFqrZykVGyC2qrOUntNP3XGW6m7bgl11t2jivl/GQ0mK6k/uYwF7mMmGSoIGiCI
+        tqpR6ohnaHf906r4/6bRHw9dz6JfYFH7fSKDkEQXYntsjNKJr6i7/hb12n/f6M+FN7GQVxl0aVlkEJJQ
+        Ha0Vk9SZSNHe+ttVNS69EU27jMf1Yv7qWVGYKZJAU9AQ3YlPiZouV9W6NEZ/Nt7F4ttFQWGRhIVlZ/Up
+        2vPAPFW90hrP5I9yxU/4hERFEhQF9IZM3QpVzak3olemc4WX+wSE5eDDRL8sIPr5AaKf7qdzn5XT6KbZ
+        NL55NuW+E4SFpTORnvIhQT83XcVj/WNRkI7fHyLaU0/UPpeopcJX4cNvznRxZOlMGl4zi858WE7nv5rt
+        u9+Ijrl9lEleo6pfnFniB5Lf+IQF0fcIUe98oh3VcgUdeBvAy9G3ymjk43Ka/F5+viDtNUPU0XS1khHN
+        8jN94wZRpER/A9FeFt5aKVdKQBItMbRsJp3ZiIYI0SvauScUMxxYlPmY389jentMrkgAktggsivLaIzn
+        DKkska5El5ITzvjLN4lCvfQzu+fJLzdAEmnCqXWzaHKrXKaPntplSpaZ0eCiO1ncSZ9YL4e4y++skV9q
+        iCTOlGOryyi3RS7XRQsHW93zzfwE5eHpnRwsZ21V8gtDIAkLQ3YVN4LJ8rmj+iRrm65kFjbu0s+Kgp1g
+        ljeY4QPB878tpMlUNZ1YX1xDZHmlyG0xmBe669YqmbKpwOaoT7ATzPS7iuv2Fr8uzJfHv9EIkrAwYDiQ
+        bk5orchR5v7blFy/cRz/mk+wl0z0Cc/FAXaQUB5+p2KiqLCcWj/L/x4vnbXblFy3WfG8LqTFUicVGoUS
+        NAAY21Tuf5cTK4IU8gkqmeEXbYOuH2Gdd7GTx/0P9xI39sVy1bVJboSJ5ho6saFCFGYK/ASts5SOf6lk
+        XzSuDNJXbtFO4OFJhZmQYs8QwY9UrnD/36kaOvpuuSjQBHiMUrkX2B4bU7LzZuXwpMrZ9PHXD+HeusBs
+        f4hXDalcID0DWip5dYjWG4aWcS/Q+Qc99U8p+Vb3RwJTriBAYCMVooO7tSge3iPAb+k5G2707OpoPQEB
+        lFimTUe8W8m3uv9Prgp6ibrmc7zvKgfzCELjVm4YzySYfbucxrbwe7a5Q+a/W6ItkYgineX4aKs6lxdv
+        5e0DUteI56UCdGDIDLDgC2Xxb+QE7OsFVoFTH3mGGjdI9q1ovWBCl0/45b67+etj08KupAC+mPSwDoh1
+        lvPjfe7rAcvgxDa3o3X6s0rXdVPObNT4BenaNxD1veKqqBfnVwtDV8JdjteBCmiAs5vdMcbIpirXdVOG
+        12iGQZqdIh6X2K5yV9aJkMYywtsD9i9wXw9ogKFVHOpinuBr8A+GVpS5rpsytHSm+51eOuKH0AMyroo6
+        QcQnPWgCJjOEy87y9vJwsie5gAbIV76Mjq+bY/3Xey0MuW8D5oG2qhGsAP2uSjpBwCI9aArmD6nMNA8P
+        NC7+jfuEBpgqxr8MaIBUbAINMOyqoBN4b9KDpuBr21FfIaz75vDEV22N9WK/uJfA9FlLZQ4NMO6rlA3W
+        cenBMLBHZ41/qXwg3D/6Na/9PH4lQWHBvoPvHTb8gUrfAAA9IV3L3V7wCqX7mVyqOvL678SkAUo3BLxw
+        V7dWh16OCBFf4B3SfYrJFA+J5bNEYaaYDIHSTYJBOFcB9hrPbIpZX917H9xjSZgpBpNgiZZBAB8CWWPJ
+        lyiwDI5960m38ZxQzMQYmDC1lkHdnh8mMelhHa0s2hZ5gBvSG04H+AHenoD4wHndFENHqOFll2AvUV3h
+        zri7HLjGzusBDTD6jbsB4Bo7r5uidYU7E3CFk4+7KuoF3pv0sI4Ojyu8L0QwxCGw897Tn0brASO6zFA6
+        8bpBOPyg/LAOdHnE/3Y5SICgUezrBRoAYi/cA3ipQmzgFGZKYDiMpRnhsJUT0OUDoyZEEAI7y0EjILvE
+        gr0NcGztbDrf7N9vQG+QxOkwTojAuGKlSYmhF2AC9JaHnuFMicE/wBfxPR+j7DvRvr4+JTY3reRzAww2
+        Vvgq6QROCzK7UkE6sH9oBz4S0jOAxQ9/EG3LDGcJtEnRTKJJyc8bVyZ4GETNDAHE9pgEpXKF+5EHjPrl
+        gTYT5E2Lw7hL6jdG2vJJisigN2A4YWK1J0j8f+7+cHvHt1bT8HtFbpSu5K+v3RhJbFayLxr92ngdV0iz
+        NebJ6hRDwDJYDGNfaMQX2hqDcYVw5NUv3EmmTi44LCVogNMbNBMf6Eo0K7l+o4FHbuShoDn6yl13KrbH
+        cVYQ5fFvdH9JUBjMtscrc9TbcKuSKxv1Nz7jF+3BOiBR5OkQ+BbcCBB/POIWmI11SsTkqEy6drWSWdjy
+        R2SSu3yivWBpK7YRGElQGKzTISZHZHbWnIA2JTPYzA9JcU8ocjhIokwxPiSFv0jprqtT8sxMu2NkA48O
+        PoLkyRkgCTMBx+S0Y96mp+51JSuc8XywVBQtgUktwqkxSVwQ1kFJ3VLnpCveoeSENzUfrPOJLQScGxyk
+        COE2SyIl8kdlQxyOBDg0XezJcco8dyWLC3lYmhsCR2EMokhJrJPIh6V31Rwp+rC0bUT1V9Bgw/uiWB1w
+        e+H+IhcgpNe8gpHGQiYHyQzt9nYh2ucenLLj8rZZw2EwuUQUGQasHMg248SZ+oOJsc+n8A8meMwbnQiN
+        atwIi1hItL8Qk5BERAE+fthD0VGNXeY7aKBxhygoLJKYsMDJ2Ts/rqp3aSy/QjQsZhF/+USFQRJkCnz7
+        nnkflLTL64z6Ft3AQl5iCm+xBSEJ0wHhnYlmbWBzKY2yTdfySvE8iwo+ceZFEliItupRDmc304EFM9Rr
+        /5vGHmS5tWIMJntZZM4n2okk1AbudVvVOSQwqTv+pCr+/2V0OHkzN8hj7CW+yA3yEYvuYQ4yGDLjlkjM
+        4Ntj51nsCK/hfdixwaYF9aq8fcls2rR/AA2MlEsKUnBJAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox_coin3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAlGSURBVHhe1Zv5
+        b1RVFMcRl0SjRo0hJibGqDHxF0qhnbbMtBQXcOk0uNT4g+EHY/wDjD8at59UwqoiJCoQUaMRMcYFKe1Q
+        oMu0A1RR3IAuJlAHylpoS50ez/fNffCWM+/e96aDepJPHHzv3Xe/993lnHNvp5Xa6MCjM2ig4QnmZepv
+        +IQGkruZQ8xx5jw1zyFqrZykVGyC2qrOUntNP3XGW6m7bgl11t2jivl/GQ0mK6k/uYwF7mMmGSoIGiCI
+        tqpR6ohnaHf906r4/6bRHw9dz6JfYFH7fSKDkEQXYntsjNKJr6i7/hb12n/f6M+FN7GQVxl0aVlkEJJQ
+        Ha0Vk9SZSNHe+ttVNS69EU27jMf1Yv7qWVGYKZJAU9AQ3YlPiZouV9W6NEZ/Nt7F4ttFQWGRhIVlZ/Up
+        2vPAPFW90hrP5I9yxU/4hERFEhQF9IZM3QpVzak3olemc4WX+wSE5eDDRL8sIPr5AaKf7qdzn5XT6KbZ
+        NL55NuW+E4SFpTORnvIhQT83XcVj/WNRkI7fHyLaU0/UPpeopcJX4cNvznRxZOlMGl4zi858WE7nv5rt
+        u9+Ijrl9lEleo6pfnFniB5Lf+IQF0fcIUe98oh3VcgUdeBvAy9G3ymjk43Ka/F5+viDtNUPU0XS1khHN
+        8jN94wZRpER/A9FeFt5aKVdKQBItMbRsJp3ZiIYI0SvauScUMxxYlPmY389jentMrkgAktggsivLaIzn
+        DKkska5El5ITzvjLN4lCvfQzu+fJLzdAEmnCqXWzaHKrXKaPntplSpaZ0eCiO1ncSZ9YL4e4y++skV9q
+        iCTOlGOryyi3RS7XRQsHW93zzfwE5eHpnRwsZ21V8gtDIAkLQ3YVN4LJ8rmj+iRrm65kFjbu0s+Kgp1g
+        ljeY4QPB878tpMlUNZ1YX1xDZHmlyG0xmBe669YqmbKpwOaoT7ATzPS7iuv2Fr8uzJfHv9EIkrAwYDiQ
+        bk5orchR5v7blFy/cRz/mk+wl0z0Cc/FAXaQUB5+p2KiqLCcWj/L/x4vnbXblFy3WfG8LqTFUicVGoUS
+        NAAY21Tuf5cTK4IU8gkqmeEXbYOuH2Gdd7GTx/0P9xI39sVy1bVJboSJ5ho6saFCFGYK/ASts5SOf6lk
+        XzSuDNJXbtFO4OFJhZmQYs8QwY9UrnD/36kaOvpuuSjQBHiMUrkX2B4bU7LzZuXwpMrZ9PHXD+HeusBs
+        f4hXDalcID0DWip5dYjWG4aWcS/Q+Qc99U8p+Vb3RwJTriBAYCMVooO7tSge3iPAb+k5G2707OpoPQEB
+        lFimTUe8W8m3uv9Prgp6ibrmc7zvKgfzCELjVm4YzySYfbucxrbwe7a5Q+a/W6ItkYgineX4aKs6lxdv
+        5e0DUteI56UCdGDIDLDgC2Xxb+QE7OsFVoFTH3mGGjdI9q1ovWBCl0/45b67+etj08KupAC+mPSwDoh1
+        lvPjfe7rAcvgxDa3o3X6s0rXdVPObNT4BenaNxD1veKqqBfnVwtDV8JdjteBCmiAs5vdMcbIpirXdVOG
+        12iGQZqdIh6X2K5yV9aJkMYywtsD9i9wXw9ogKFVHOpinuBr8A+GVpS5rpsytHSm+51eOuKH0AMyroo6
+        QcQnPWgCJjOEy87y9vJwsie5gAbIV76Mjq+bY/3Xey0MuW8D5oG2qhGsAP2uSjpBwCI9aArmD6nMNA8P
+        NC7+jfuEBpgqxr8MaIBUbAINMOyqoBN4b9KDpuBr21FfIaz75vDEV22N9WK/uJfA9FlLZQ4NMO6rlA3W
+        cenBMLBHZ41/qXwg3D/6Na/9PH4lQWHBvoPvHTb8gUrfAAA9IV3L3V7wCqX7mVyqOvL678SkAUo3BLxw
+        V7dWh16OCBFf4B3SfYrJFA+J5bNEYaaYDIHSTYJBOFcB9hrPbIpZX917H9xjSZgpBpNgiZZBAB8CWWPJ
+        lyiwDI5960m38ZxQzMQYmDC1lkHdnh8mMelhHa0s2hZ5gBvSG04H+AHenoD4wHndFENHqOFll2AvUV3h
+        zri7HLjGzusBDTD6jbsB4Bo7r5uidYU7E3CFk4+7KuoF3pv0sI4Ojyu8L0QwxCGw897Tn0brASO6zFA6
+        8bpBOPyg/LAOdHnE/3Y5SICgUezrBRoAYi/cA3ipQmzgFGZKYDiMpRnhsJUT0OUDoyZEEAI7y0EjILvE
+        gr0NcGztbDrf7N9vQG+QxOkwTojAuGKlSYmhF2AC9JaHnuFMicE/wBfxPR+j7DvRvr4+JTY3reRzAww2
+        Vvgq6QROCzK7UkE6sH9oBz4S0jOAxQ9/EG3LDGcJtEnRTKJJyc8bVyZ4GETNDAHE9pgEpXKF+5EHjPrl
+        gTYT5E2Lw7hL6jdG2vJJisigN2A4YWK1J0j8f+7+cHvHt1bT8HtFbpSu5K+v3RhJbFayLxr92ngdV0iz
+        NebJ6hRDwDJYDGNfaMQX2hqDcYVw5NUv3EmmTi44LCVogNMbNBMf6Eo0K7l+o4FHbuShoDn6yl13KrbH
+        cVYQ5fFvdH9JUBjMtscrc9TbcKuSKxv1Nz7jF+3BOiBR5OkQ+BbcCBB/POIWmI11SsTkqEy6drWSWdjy
+        R2SSu3yivWBpK7YRGElQGKzTISZHZHbWnIA2JTPYzA9JcU8ocjhIokwxPiSFv0jprqtT8sxMu2NkA48O
+        PoLkyRkgCTMBx+S0Y96mp+51JSuc8XywVBQtgUktwqkxSVwQ1kFJ3VLnpCveoeSENzUfrPOJLQScGxyk
+        COE2SyIl8kdlQxyOBDg0XezJcco8dyWLC3lYmhsCR2EMokhJrJPIh6V31Rwp+rC0bUT1V9Bgw/uiWB1w
+        e+H+IhcgpNe8gpHGQiYHyQzt9nYh2ucenLLj8rZZw2EwuUQUGQasHMg248SZ+oOJsc+n8A8meMwbnQiN
+        atwIi1hItL8Qk5BERAE+fthD0VGNXeY7aKBxhygoLJKYsMDJ2Ts/rqp3aSy/QjQsZhF/+USFQRJkCnz7
+        nnkflLTL64z6Ft3AQl5iCm+xBSEJ0wHhnYlmbWBzKY2yTdfySvE8iwo+ceZFEliItupRDmc304EFM9Rr
+        /5vGHmS5tWIMJntZZM4n2okk1AbudVvVOSQwqTv+pCr+/2V0OHkzN8hj7CW+yA3yEYvuYQ4yGDLjlkjM
+        4Ntj51nsCK/hfdixwaYF9aq8fcls2rR/AA2MlEsKUnBJAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox_coin2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        1wAAAdcBjJIIaAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAlGSURBVHhe1Zv5
+        b1RVFMcRl0SjRo0hJibGqDHxF0qhnbbMtBQXcOk0uNT4g+EHY/wDjD8at59UwqoiJCoQUaMRMcYFKe1Q
+        oMu0A1RR3IAuJlAHylpoS50ez/fNffCWM+/e96aDepJPHHzv3Xe/993lnHNvp5Xa6MCjM2ig4QnmZepv
+        +IQGkruZQ8xx5jw1zyFqrZykVGyC2qrOUntNP3XGW6m7bgl11t2jivl/GQ0mK6k/uYwF7mMmGSoIGiCI
+        tqpR6ohnaHf906r4/6bRHw9dz6JfYFH7fSKDkEQXYntsjNKJr6i7/hb12n/f6M+FN7GQVxl0aVlkEJJQ
+        Ha0Vk9SZSNHe+ttVNS69EU27jMf1Yv7qWVGYKZJAU9AQ3YlPiZouV9W6NEZ/Nt7F4ttFQWGRhIVlZ/Up
+        2vPAPFW90hrP5I9yxU/4hERFEhQF9IZM3QpVzak3olemc4WX+wSE5eDDRL8sIPr5AaKf7qdzn5XT6KbZ
+        NL55NuW+E4SFpTORnvIhQT83XcVj/WNRkI7fHyLaU0/UPpeopcJX4cNvznRxZOlMGl4zi858WE7nv5rt
+        u9+Ijrl9lEleo6pfnFniB5Lf+IQF0fcIUe98oh3VcgUdeBvAy9G3ymjk43Ka/F5+viDtNUPU0XS1khHN
+        8jN94wZRpER/A9FeFt5aKVdKQBItMbRsJp3ZiIYI0SvauScUMxxYlPmY389jentMrkgAktggsivLaIzn
+        DKkska5El5ITzvjLN4lCvfQzu+fJLzdAEmnCqXWzaHKrXKaPntplSpaZ0eCiO1ncSZ9YL4e4y++skV9q
+        iCTOlGOryyi3RS7XRQsHW93zzfwE5eHpnRwsZ21V8gtDIAkLQ3YVN4LJ8rmj+iRrm65kFjbu0s+Kgp1g
+        ljeY4QPB878tpMlUNZ1YX1xDZHmlyG0xmBe669YqmbKpwOaoT7ATzPS7iuv2Fr8uzJfHv9EIkrAwYDiQ
+        bk5orchR5v7blFy/cRz/mk+wl0z0Cc/FAXaQUB5+p2KiqLCcWj/L/x4vnbXblFy3WfG8LqTFUicVGoUS
+        NAAY21Tuf5cTK4IU8gkqmeEXbYOuH2Gdd7GTx/0P9xI39sVy1bVJboSJ5ho6saFCFGYK/ASts5SOf6lk
+        XzSuDNJXbtFO4OFJhZmQYs8QwY9UrnD/36kaOvpuuSjQBHiMUrkX2B4bU7LzZuXwpMrZ9PHXD+HeusBs
+        f4hXDalcID0DWip5dYjWG4aWcS/Q+Qc99U8p+Vb3RwJTriBAYCMVooO7tSge3iPAb+k5G2707OpoPQEB
+        lFimTUe8W8m3uv9Prgp6ibrmc7zvKgfzCELjVm4YzySYfbucxrbwe7a5Q+a/W6ItkYgineX4aKs6lxdv
+        5e0DUteI56UCdGDIDLDgC2Xxb+QE7OsFVoFTH3mGGjdI9q1ovWBCl0/45b67+etj08KupAC+mPSwDoh1
+        lvPjfe7rAcvgxDa3o3X6s0rXdVPObNT4BenaNxD1veKqqBfnVwtDV8JdjteBCmiAs5vdMcbIpirXdVOG
+        12iGQZqdIh6X2K5yV9aJkMYywtsD9i9wXw9ogKFVHOpinuBr8A+GVpS5rpsytHSm+51eOuKH0AMyroo6
+        QcQnPWgCJjOEy87y9vJwsie5gAbIV76Mjq+bY/3Xey0MuW8D5oG2qhGsAP2uSjpBwCI9aArmD6nMNA8P
+        NC7+jfuEBpgqxr8MaIBUbAINMOyqoBN4b9KDpuBr21FfIaz75vDEV22N9WK/uJfA9FlLZQ4NMO6rlA3W
+        cenBMLBHZ41/qXwg3D/6Na/9PH4lQWHBvoPvHTb8gUrfAAA9IV3L3V7wCqX7mVyqOvL678SkAUo3BLxw
+        V7dWh16OCBFf4B3SfYrJFA+J5bNEYaaYDIHSTYJBOFcB9hrPbIpZX917H9xjSZgpBpNgiZZBAB8CWWPJ
+        lyiwDI5960m38ZxQzMQYmDC1lkHdnh8mMelhHa0s2hZ5gBvSG04H+AHenoD4wHndFENHqOFll2AvUV3h
+        zri7HLjGzusBDTD6jbsB4Bo7r5uidYU7E3CFk4+7KuoF3pv0sI4Ojyu8L0QwxCGw897Tn0brASO6zFA6
+        8bpBOPyg/LAOdHnE/3Y5SICgUezrBRoAYi/cA3ipQmzgFGZKYDiMpRnhsJUT0OUDoyZEEAI7y0EjILvE
+        gr0NcGztbDrf7N9vQG+QxOkwTojAuGKlSYmhF2AC9JaHnuFMicE/wBfxPR+j7DvRvr4+JTY3reRzAww2
+        Vvgq6QROCzK7UkE6sH9oBz4S0jOAxQ9/EG3LDGcJtEnRTKJJyc8bVyZ4GETNDAHE9pgEpXKF+5EHjPrl
+        gTYT5E2Lw7hL6jdG2vJJisigN2A4YWK1J0j8f+7+cHvHt1bT8HtFbpSu5K+v3RhJbFayLxr92ngdV0iz
+        NebJ6hRDwDJYDGNfaMQX2hqDcYVw5NUv3EmmTi44LCVogNMbNBMf6Eo0K7l+o4FHbuShoDn6yl13KrbH
+        cVYQ5fFvdH9JUBjMtscrc9TbcKuSKxv1Nz7jF+3BOiBR5OkQ+BbcCBB/POIWmI11SsTkqEy6drWSWdjy
+        R2SSu3yivWBpK7YRGElQGKzTISZHZHbWnIA2JTPYzA9JcU8ocjhIokwxPiSFv0jprqtT8sxMu2NkA48O
+        PoLkyRkgCTMBx+S0Y96mp+51JSuc8XywVBQtgUktwqkxSVwQ1kFJ3VLnpCveoeSENzUfrPOJLQScGxyk
+        COE2SyIl8kdlQxyOBDg0XezJcco8dyWLC3lYmhsCR2EMokhJrJPIh6V31Rwp+rC0bUT1V9Bgw/uiWB1w
+        e+H+IhcgpNe8gpHGQiYHyQzt9nYh2ucenLLj8rZZw2EwuUQUGQasHMg248SZ+oOJsc+n8A8meMwbnQiN
+        atwIi1hItL8Qk5BERAE+fthD0VGNXeY7aKBxhygoLJKYsMDJ2Ts/rqp3aSy/QjQsZhF/+USFQRJkCnz7
+        nnkflLTL64z6Ft3AQl5iCm+xBSEJ0wHhnYlmbWBzKY2yTdfySvE8iwo+ceZFEliItupRDmc304EFM9Rr
+        /5vGHmS5tWIMJntZZM4n2okk1AbudVvVOSQwqTv+pCr+/2V0OHkzN8hj7CW+yA3yEYvuYQ4yGDLjlkjM
+        4Ntj51nsCK/hfdixwaYF9aq8fcls2rR/AA2MlEsKUnBJAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
